fixed author avatar stretching when author profile is enabled, disabled author profile by default

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -134,7 +134,9 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 200px;
+    width: auto;
+    height: auto;
     border-radius: 50%;
 
     @include breakpoint($large) {
